made changes on the style.css with some colours

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: #3a86ff;
+    background-color: #90D7FF;
     color: whitesmoke;
 }
 
@@ -34,17 +34,17 @@ body {
 }
 
 .cupcake1 {
-    background-color: #ff006e;
+    background-color: #B8B3BE;
 }
 
 .cupcake2 {
-    background-color: #fb5607;
+    background-color: #C4C0C9;
 }
 
 .cupcake3 {
-    background-color: #8338ec;
+    background-color: #DCE0D9;
 }
 
 .blue {
-    background-color: #3a86ff;
+    background-color: #96A29A;
 }
